[package]
name = "skyline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35", features = ["bundled", "static-link"] }
rand = "0.8"
clap = { version = "3.1.6", features = ["cargo"] }

[profile.release]
debug = false
strip = true
lto = true
