[package]
name = "skyline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
rand = "0.8.5"
clap = { version = "3.1.6", features = ["cargo"] }
itertools = "0.10.3"

[profile.release]
debug = false
strip = true
lto = true
